# 007Renderer

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  imgui.ini  run-clang-format.py  setup.ps1  slangdconfig.json
.github/: copilot-instructions.md
.github/workflow/: windows-build.yml
.github/workflows/: windows-build.yml  windows-test.yml
cmake/: FindImgui.cmake
media/: cornell_box.gltf  cornell_box.usdc
patches/: nvrhi-disable-coopvec.patch  tinyusdz-raw-colorspace-passthrough.patch
shaders/: hello.slang  raytracing.slang
src/: main.cpp  temp_main.cpp
src/Core/: Buffer.cpp  Buffer.h  ComputePass.cpp  ComputePass.h  DescriptorHeapAllocator.h  Device.cpp  Device.h  Geometry.cpp  Geometry.h  GeometryData.h  OBJLoader.cpp  OBJLoader.h  Pointer.h  RayTracingPass.cpp  RayTracingPass.h  RenderData.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp
src/Core/Program/: BindingSetManager.cpp  BindingSetManager.h  Program.cpp  Program.h  ProgramReflectionDump.cpp  ReflectionInfo.h  ShaderCompiler.cpp  ShaderCompiler.h
src/RenderPasses/: ComputePass.cpp  ComputePass.h  Pass.cpp  Pass.h  RayTracingPass.cpp  RayTracingPass.h  RenderGraph.cpp  RenderGraph.h  RenderGraphBuilder.h  RenderGraphEditor.cpp  RenderGraphEditor.h  RenderGraphEditor_backup.cpp  RenderPass.h  RenderPassFlags.h
src/RenderPasses/AccumulatePass/: Accumulate.cpp  Accumulate.h  Accumulate.slang  AccumulatePass.cpp  AccumulatePass.h  AccumulatePass.slang
src/RenderPasses/ErrorMeasure/: ErrorMeasure.cpp  ErrorMeasure.h  ErrorMeasure.slang
src/RenderPasses/ErrorMeasurePass/: ErrorMeasure.cpp  ErrorMeasure.h  ErrorMeasure.slang
src/RenderPasses/PathTracingPass/: LightSampler.slang  PathTracing.cpp  PathTracing.slang  PathTracingPass.cpp  PathTracingPass.h
src/RenderPasses/ToneMappingPass/: ToneMapping.cpp  ToneMapping.h  ToneMapping.slang
src/RenderPasses/Utils/TextureAverage/: TextureAverage.cpp  TextureAverage.h  TextureAverage.slang
src/Scene/: Scene.cpp  Scene.h  Scene.slang  ShadingData.slang  ShadingPrep.slang  VertexData.slang
src/Scene/Camera/: Camera.cpp  Camera.h  Camera.slang  CameraData.slang
src/Scene/Importer/: AssimpImporter.cpp  AssimpImporter.h  Importer.cpp  Importer.h  UsdImporter.cpp  UsdImporter.h
src/Scene/Material/: BSDFTypes.slang  GGXMicrofacet.slang  GLTFBRDFs.slang  GLTFBSDFs.slang  GLTFMaterial.slang  LambertianMaterial.slang  Material.h  Material.slang  TextureManager.cpp  TextureManager.h  TextureSampler.slang
src/ShaderPasses/: ComputePass.cpp  ComputePass.h  Pass.cpp  Pass.h  RayTracingPass.cpp  RayTracingPass.h
src/Utils/: ExrUtils.cpp  ExrUtils.h  GUI.cpp  GUI.h  GUIWrapper.cpp  GUIWrapper.h  Logger.cpp  Logger.h  ResourceIO.cpp  ResourceIO.h  Theme.cpp  Theme.h  Widgets.cpp  Widgets.h  imgui_spectrum.cpp  imgui_spectrum.h
src/Utils/Math/: Math.h  MathConstants.slangh  MatrixUtils.slang  Ray.slang  Sampling.slang
src/Utils/Sampling/: Sample.slang  SampleGenerator.cpp  SampleGenerator.h  SampleGenerator.slang  SampleGeneratorInterface.slang
tests/: BufferTest.cpp  ComputeShaderTest.cpp  ComputeShaderTest.slang  Environment.cpp  Environment.h  PathTracerTest.cpp  RenderGraphTest.cpp  SlangTest.cpp  SlangTest.slang  TestHelpers.cpp  TestHelpers.h
tests/benchmarks/: bistro_baseline.csv
